[package]
name = "image_processor_web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-multipart = "0.6.0"
actix-files = "0.6.2"
image = "0.24.6"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
futures = "0.3.28"
uuid = { version = "1.3.3", features = ["v4"] }
sanitize-filename = "0.4.0"
tokio = { version = "1.28.2", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.17"